fix menu buttonz-index

--- a/components/TheHeader.module.css
+++ b/components/TheHeader.module.css
@@ -114,7 +114,6 @@
     top: auto;
     bottom: var(--sp-5);
     width: var(--sp-10);
-    z-index: 16;
   }
 }
 
